--- a/style.css
+++ b/style.css
@@ -2,13 +2,14 @@ body {
   background-color: rgb(225, 198, 165);
   border: 1rem solid;
   padding: 50px 50px 50px 50px;
+  font-family: "Montserrat", sans-serif;
 }
 
 .photo {
-  width: 450px;
-  height: 420px;
-  margin: 0px 0px 0px 460px;
+  width: 400px;
+  height: 400px;
   border-radius: 50%;
+  margin: 0px 0px 0px 470px;
 }
 
 hr {
@@ -20,7 +21,15 @@ hr {
   text-decoration: none;
 }
 
-.divic {
+.bot123 {
+  margin-right: 1000px;
+}
+
+header {
+  text-align: center;
+}
+
+article {
   text-align: center;
 }
 
@@ -39,4 +48,26 @@ hr {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   border-radius: 45%;
   text-align: right;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+img {
+  animation: spin 5s linear 0s infinite;
+}
+
+aside {
+  width: 40%;
+  padding-left: 1rem;
+  margin-top: 10px;
+  float: right;
+  box-shadow: inset 5px 0 5px -5px #000000;
+  color: #000000;
 }
