--- a/style.css
+++ b/style.css
@@ -5,11 +5,46 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-.photo {
-  width: 400px;
-  height: 400px;
+.wrapper {
+  max-width: 350px;
+  height: 350px;
   border-radius: 50%;
-  margin: 0px 0px 0px 470px;
+  display: flex;
+  border: 2px solid black;
+  overflow-x: hidden;
+  position: relative;
+  margin: auto;
+}
+@-webkit-keyframes move {
+  100% {
+    transform: translateX(-100%);
+    margin-left: 100%;
+  }
+}
+@-moz-keyframes move {
+  100% {
+    transform: translateX(-100%);
+    margin-left: 100%;
+  }
+}
+@-o-keyframes move {
+  100% {
+    transform: translateX(-100%);
+    margin-left: 100%;
+  }
+}
+@keyframes move {
+  100% {
+    transform: translateX(-100%);
+    margin-left: 100%;
+  }
+}
+
+img.movepics {
+  transform: translateX(0);
+  margin-left: 0;
+  display: block;
+  animation: move 10s linear alternate infinite;
 }
 
 hr {
