--- a/style.css
+++ b/style.css
@@ -1,12 +1,20 @@
 body {
   background-color: rgb(226, 196, 159);
-  border: 1rem solid;
-  padding: 50px 50px 50px 50px;
+  padding: 60px 60px 60px 60px;
   font-family: "Montserrat", sans-serif;
+  flex-wrap: wrap;
 }
 
 .text2 {
-  margin: 50px 50px 50px 50px;
+  text-align: left;
+  text-align: right;
+  text-align: center;
+}
+
+.text3 {
+  text-align: left;
+  text-align: right;
+  text-align: center;
 }
 
 .wrapper {
